Use consistent terminology for keys in API and CLI.
We use viewing, sending, and freezing.

--- a/eqs/Cargo.toml
+++ b/eqs/Cargo.toml
@@ -23,7 +23,7 @@ markdown = "0.3"
 net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
 rand_chacha = { version = "0.3.1", features = ["serde1"] }
 reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
-seahorse = { git = "ssh://git@github.com/EspressoSystems/seahorse.git", rev = "48aaed68d922b23e4a3d9f4e9dcc6d50185c3619", features = ["testing"] }
+seahorse = { git = "ssh://git@github.com/EspressoSystems/seahorse.git", features = ["testing"] }
 serde = { version = "1.0.123", features = ["derive", "rc"] }
 serde_derive = "1.0.118"
 serde_json = "1.0.61"
