--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -15,7 +15,7 @@ jf-rescue = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jell
 jf-utils = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
 key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }
 reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
-zerok-macros = { git = "ssh://git@github.com/EspressoSystems/zerok-macros.git" }
+espresso-macros = { git = "ssh://git@github.com/EspressoSystems/espresso-macros.git" }
 arbitrary = { version="1.0", features=["derive"] }
 arbitrary-wrappers = { git = "ssh://git@github.com/EspressoSystems/arbitrary-wrappers.git" }
 
