--- a/.github/workflows/testnet-build.yml
+++ b/.github/workflows/testnet-build.yml
@@ -2,7 +2,7 @@ name: Testnet Build
 
 on:
   schedule:
-    - cron: '0 10 * * *' # run at 10:00 UTC
+    - cron: "0 10 * * *" # run at 10:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -13,9 +13,6 @@ jobs:
     runs-on: self-hosted
     container:
       image: ghcr.io/espressosystems/nix:main
-      credentials:
-         username: ancient123
-         password: ${{ secrets.ORG_GITHUB_PAT }}
       volumes:
         - github_nix_251:/nix
     steps:
