--- a/doc/workflow/Cargo.toml
+++ b/doc/workflow/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cape-workflow"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Espresso Systems <hello@espressosys.com>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
@@ -9,7 +9,7 @@ license = "GPL-3.0-or-later"
 cap-rust-sandbox = { path = "../../contracts/rust" }
 jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
 jf-rescue = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
-jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.1" }
+jf-cap = { features = ["test_apis"], git = "https://github.com/EspressoSystems/cap.git" }
 
 ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
 
