--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -7,6 +7,7 @@ description = "Web server that maintains a persistent mapping from user addresse
 license = "GPL-3.0-or-later"
 
 [dependencies]
+futures = "0.3.21"
 async-std = { version = "1.6.0", features = ["attributes"] }
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
@@ -16,5 +17,6 @@ net = { git = "https://github.com/EspressoSystems/net.git" }
 once_cell = "1"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
+signal-hook = "0.3.13"
 surf = "2.3.2"
 tide = "0.16.0"
