--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -17,6 +17,7 @@ net = { git = "https://github.com/EspressoSystems/net.git" }
 once_cell = "1"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
-signal-hook = "0.3.13"
 surf = "2.3.2"
 tide = "0.16.0"
+signal-hook = "0.3.13"
+signal-hook-async-std = "0.2.2"
