--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -9,6 +9,7 @@ license = "GPL-3.0-or-later"
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1.51"
 address_book = { path = "../address_book" }
+base64 = "0.13"
 bincode = "1.3.3"
 cap-rust-sandbox = { path = "../contracts/rust" }
 commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
