--- a/wallet/api/api.toml
+++ b/wallet/api/api.toml
@@ -40,7 +40,7 @@ DOC = "Generate a random mnemonic phrase."
 [route.newwallet]
 PATH = ["newwallet/:mnemonic/:password", "newwallet/:mnemonic/:password/path/:path"]
 ":password" = "Literal"
-":path" = "TaggedBase64"
+":path" = "Base64"
 ":mnemonic" = "Literal"
 DOC = """
 Creates and opens a new the wallet with the given mnemonic and password.
@@ -49,7 +49,7 @@ Creates and opens a new the wallet with the given mnemonic and password.
 [route.openwallet]
 PATH = ["openwallet/:password", "openwallet/:password/path/:path"]
 ":password" = "Literal"
-":path" = "TaggedBase64"
+":path" = "Base64"
 DOC = """
 Open the wallet from local storage with the given password and path.
 """
@@ -244,7 +244,7 @@ PATH = [
   "newasset",
 ]
 ":erc20" = "TaggedBase64"
-":description" = "TaggedBase64"
+":description" = "Base64"
 ":sponsor" = "TaggedBase64"
 ":freezing_key" = "TaggedBase64"
 ":viewing_key" = "TaggedBase64"
