--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -10,6 +10,7 @@ license = "GPL-3.0-or-later"
 async-std = { version = "1.6.0", features = ["attributes"] }
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
+dirs = "4.0"
 itertools = "0.10.1"
 jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git" }
 net = { git = "https://github.com/EspressoSystems/net.git" }
