--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -7,6 +7,7 @@ description = "Web server that maintains a persistent mapping from user addresse
 license = "GPL-3.0-or-later"
 
 [dependencies]
+futures = "0.3.21"
 async-std = { version = "1.6.0", features = ["attributes"] }
 atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
 bincode = "1.3.3"
@@ -18,3 +19,5 @@ rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
 surf = "2.3.2"
 tide = "0.16.0"
+signal-hook = "0.3.13"
+signal-hook-async-std = "0.2.2"
