Basic stateless address book with file store (#718)
* Stateless address book with file store
* Save to temporary file, then rename
This avoids writing to files that we may be reading from.

* Configurable address book store path
* Remove temporary directory after tests

--- a/address_book/Cargo.toml
+++ b/address_book/Cargo.toml
@@ -21,3 +21,7 @@ surf = "2.3.2"
 tide = "0.16.0"
 signal-hook = "0.3.13"
 signal-hook-async-std = "0.2.2"
+hex = "0.4.3"
+rand = "0.8.5"
+dirs = "4.0.0"
+tempdir = "0.3.7"
