--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,11 +98,10 @@ jobs:
           name: wallet-webserver
           path: wallet-checkout/target/release/
 
-      - name: Set linker/loader to not be nix
-        run: patchelf --set-interpreter /lib64/ld-linux-x86-64.so.2 wallet-checkout/target/release/web_server
-
       - uses: docker/setup-buildx-action@v1
         name: Setup Docker BuildKit (buildx)
+        with:
+          driver: docker
 
       - uses: docker/login-action@v1
         name: Login to Github Container Repo
@@ -117,6 +116,9 @@ jobs:
         id: meta
         with:
           images: ghcr.io/espressosystems/cape/wallet
+
+      - name: Generate base image
+        run: cd wallet-checkout && bin/build-docker-base
 
       - uses: docker/build-push-action@v2
         name: Build and Push Docker
