--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -20,6 +20,7 @@ reef = { git = "https://github.com/EspressoSystems/reef.git" }
 espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git" }
 arbitrary = { version="1.0", features=["derive"] }
 arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git" }
+tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }
 
 # We need the legacy feature in order to avoid gas estimation issues. See https://github.com/gakonst/ethers-rs/issues/825
 ethers = { features=["legacy"], git = "https://github.com/gakonst/ethers-rs", branch = "master" }
