--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@ GOERLI_MNEMONIC="test test test test test test test test test test test junk"
 GOERLI_URL="https://goerli.infura.io/v3/<project_id>"
 
 TEST_MNEMONIC="test test test test test test test test test test test junk"
+
+CAPE_RELAYER_WALLET_MNEMONIC="test test test test test test test test test test test junk"
